--- a/contact.html
+++ b/contact.html
@@ -44,8 +44,8 @@
         </div>
 
         <div>
-            <input type="checkbox" id="tiktok" name="tiktok">
-            <label for="tiktok">Tiktok</label>
+            <input type="checkbox" id="Facebook" name="Facebook">
+            <label for="Facebook">Facebook</label>
         </div>
 
         <div>
