--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>投稿フォーム</title>
 <link rel="stylesheet" href="style.css">
-<script type="text/javascript" src="Facebook_Post.js"></script>
+<script type="text/javascript" src="main.js"></script>
 <!--[if lt IE 9]>
 <script src="html5shiv-printshiv.js"></script>
 <![endif]-->
