clean:ファイル名を変更してわかりやすくした

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <nav>
 <ul>
-<li><a href="index.php">board</a></li><!--チェックボックスのwebに対応した仮の掲示版 -->
+<li><a href="board.php">board</a></li><!--チェックボックスのwebに対応した仮の掲示版 -->
 </ul>
 </nav>
 </header>
